--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<html lang="ch">
 		<head>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<link href="Birthday.css" rel="stylesheet">
+			<link href="stylesheet.css" rel="stylesheet">
 			<script src="Birthday.js" defer></script>
 			<meta charset="UTF-8">
 			<title>祝你生日快乐</title>
