--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<link href="Birthday.css" rel="stylesheet">
 			<script src="Birthday.js" defer></script>
 			<meta charset="UTF-8">
-			<title>祝你生日快乐</title>
+			<title>Happy Birthday to you!</title>
 		</head>
 		
 		
