--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<body>
 			
 			<audio id="backgroundmusic">
-				<source src="audio/FATYHD.mp3">
+				<source src="audio/audio.mp3">
+				<audio controls volume="0.1" id="audio-example-low" class="audio-example">	
 			</audio>
 		
 			<div class="page" id="pageCloud">
