--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<body>
 			
 			<audio id="backgroundmusic">
-				<source src="audio/audio.mp3">
+				<source src="sound/audio.mp3">
 			</audio>
 		
 			<div class="page" id="pageCloud">
