--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 		
 		<body>
 			
-			<audio id="backgroundmusic">
+			<audio autoplay id="backgroundmusic">
 				<source src="sound/audio.mp3">
 			</audio>
+
+			<script>
+			  var audio = document.getElementById("backgroundmusic");
+			  audio.volume = 0.6;
+			</script>
 		
 			<div class="page" id="pageCloud">
 				<div id="blackLayer"></div>
