Update font and audio

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 			<script>
 			  var audio = document.getElementById("backgroundmusic");
-			  audio.volume = 0.6;
+			  audio.volume = 0.4;
 			</script>
 		
 			<div class="page" id="pageCloud">
 				<div id="blackLayer"></div>
 				<div id="clickme">
-					<button>Click me</button>
+					<button>Click here!</button>
 				</div>	
 				<div class="banner" id="horizontalBanner"></div>
 				<div class="banner" id="verticalBanner"></div>
