--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				<div id="wishtext">
 					<h1>Happy Birthday!</h1>
 					<div>
-						<h2>2018年1月19日</h2>
-						<h2>January 19th, 2018</h2>
+						<h2>2020年10月20日</h2>
+						<h2>October 20th, 2020</h2>
 					</div>
 				</div>
 				<svg class="arrows">
@@ -43,23 +43,23 @@
 			</div>
 			
 			<div class="page" id="pageDandalion">
-				<p>愿你的智慧和身量<br>
-				并神和人喜爱你的心都一同增长！</p>
+				<p>Selamat ulang tahun yang ke 21!<br>
+				Sorry I can't be there for this year's birthday, but I hope the memories and gifts will make up for that</p>
 			</div>
 			<div class="page" id="pageDawn">
-				<p>愿神祝福你，使你像一棵树栽在溪水旁，按时候结果子，叶子也不枯干，并使你所做的尽都顺利。</p>
+				<p>Wishes: Semoga tambah pintar, sayang keluarga, sukses, bahagia. Juga semoga tambah sayang mbe meme dan semoga hubungannya kita lancar trus kedepannya</p>
 			</div>
 			
 			<div class="page" id="pageRain">
-				<p>保护你的是耶和华<br>耶和华在你右边荫庇你<br>白日，太阳必不伤你<br>夜间，月亮必不害你。</p>
+				<p>Another wishes : Semoga kuliahnya sukses, S2 juga lancar, disayang sama professor, temennya tambah banyak juga, tambah bersinar. Boleh sukses tapi jangan terlalu pressure diri sendiri sama ambisius ya!</p>
 			</div>
 			<div class="page" id="pageRiver">
-				<p>因为凡从神生的，就胜过世界；使我们胜过世界的，就是我们的信心。</p>
+				<p>Meskipun ga bisa ketemu, semoga kita tetep sayang dan setia terhadap satu sama lain ya
+				Wishes for us to meet soon</p>
 			</div>
 			<div class="page" id="pageSnow">
 				<footer>
-					Reference: 路 2:52, 诗 1:3, 121:5-6, 约一 5:4<br>
-					Music: For all that you have done.
+					PS: semoga disimpen ya alamat websitenya dan diingat ingat trus. Ini ga gampang lo ya buatnya :)
 				</footer>
 			</div>
 
