--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<p>Another wishes : Semoga kuliahnya sukses, S2 juga lancar, disayang sama professor, temennya tambah banyak juga, tambah bersinar. Boleh sukses tapi jangan terlalu pressure diri sendiri sama ambisius ya!</p>
 			</div>
 			<div class="page" id="pageRiver">
-				<p>Meskipun ga bisa ketemu, semoga kita tetep sayang dan setia terhadap satu sama lain ya
+				<p>Meskipun ga bisa ketemu, semoga kita tetep sayang dan setia terhadap satu sama lain ya<br>
 				Wishes for us to meet soon</p>
 			</div>
 			<div class="page" id="pageSnow">
